# Contact-Book-Application

./: db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  middleware.py  models.py  tasks.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_is_staff_and_more.py  0003_customuser_role_alter_customuser_is_staff_and_more.py
accounts/templates/accounts/: login.html  otp_verify.html  register.html
accounts/tests/: test_forms.py  test_models.py  test_views.py
contact_book_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
contacts/: admin.py  ajax_datatable_views.py  forms.py  models.py  tasks.py  urls.py  views.py
contacts/management/commands/: create_contact.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: contact_list.html
contacts/tests/: test_commands.py  test_forms.py  test_models.py  test_views.py
static/js/: contacts.js
templates/: base.html
