[project]
name = "contact-book-project"
version = "0.1.0"
description = ""
authors = [
    {name = "kavinprasad705",email = "prasadkavin705@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "django-ajax-datatable (>=4.5.0,<5.0.0)",
    "celery (>=5.6.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
